# Perception

./: .gitignore
CPP/Cognition/: CMakeLists.txt  Cognition.cpp  Cognition.h
CPP/Cognition/CPP/: Neural_Node.cpp
CPP/Cognition/CPP/Cognition_Elements/: Neural_Node.cpp
CPP/Cognition/CPP/Utilities/: Root.cpp
CPP/Cognition/Headers/: Neural_Node.h
CPP/Cognition/Headers/Cognition_Elements/: Neural_Node.h
CPP/Cognition/Headers/Utilities/: Root.h
CPP/Perception/: CMakeLists.txt  Perception.cpp  Perception.h  ReadMe  test
CPP/Perception/CPP/Perception_Elements/: Bias.cpp  Derived_Value.cpp  Derived_Values.cpp  Expected_Results.cpp  Input.cpp  Layer.cpp  Loss.cpp  Neural_Node.cpp  Output.cpp  Perception_Element.cpp  Prediction.cpp  Weight.cpp
CPP/Perception/CPP/Utilities/: Perception_Element_Display.cpp  Perception_Logger.cpp  Root.cpp
CPP/Perception/Headers/Perception_Elements/: Bias.h  Derived_Value.h  Derived_Values.h  Expected_Results.h  Input.h  Layer.h  Loss.h  Neural_Node.h  Output.h  Perception_Element.h  Prediction.h  Weight.h
CPP/Perception/Headers/Utilities/: Enums.h  Perception_Element_Display.h  Perception_Logger.h  Root.h
CPP/Perception/Testing/: Testing_Layer.cpp
CPP/Perception/Testing CMake/: Testing_Layer.cpp
JAVA/Cognition/: ReadME.md
JAVA/Cognition/src/main/java/: Main.java
JAVA/Cognition/src/main/java/CognitionMap/: Layer.java  Layer_Activation.java
JAVA/Cognition/src/main/java/CognitionMap/Elements/: Bias.java  Cognition_Element.java  Cognition_Element_Interface.java  Neural_Node.java  Neuron.java  Weight.java
JAVA/Cognition/src/main/java/CognitionMap/Layers/: Layer.java  Layer_Activation.java
JAVA/Cognition/src/main/java/CognitionMap/Math/: Cognition_Math.java  Math.java
JAVA/Cognition/src/main/java/Utilities/: Enums.java
JAVA/Perception/: pom.xml
JAVA/Perception/src/main/java/: Main.java
JAVA/Perception/src/main/java/PerceptionMap/Elements/: Bias.java  Neural_Node.java  Perception_Element.java  Perception_Element_Interface.java  Weight.java
JAVA/Perception/src/main/java/PerceptionMap/Layers/: Layer.java  Layer_Activation.java
JAVA/Perception/src/main/java/PerceptionMap/Math/: Cognition_Math.java
